--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^3.0.0-beta.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
@@ -25,7 +26,8 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "sass": "^1.69.5",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^11.0.4"
   },
   "devDependencies": {
     "@types/aos": "^3.0.6",
