--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^6.18.0",
     "sass": "^1.69.5",
     "sort-by": "^1.2.0",
-    "swiper": "^11.0.4"
+    "swiper": "^11.0.4",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/aos": "^3.0.6",
